Static memory